# cube_solver

./: CMakeLists.txt  README.md
scripts/: setup_backend.sh
src/: main.cpp
tools/: solve_5x5_state.py
